# django-flow-integration

./: README.md  docker-compose.yml  pyproject.toml
config/: .env.template
config/redis/: redis.conf  users.acl
docker/django/: Dockerfile
market/: manage.py  pytest.ini  settings.json
market/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
market/accounts/migrations/: 0001_initial.py
market/accounts/services/: account.py  base.py
market/market/: settings.py  urls.py  wsgi.py
market/tests/: test_flow.py  test_utils.py
market/utils/: url.py
